update poo chapters

--- a/src/canevasPOO.html
+++ b/src/canevasPOO.html
@@ -1,101 +1,145 @@
- 
-    <h2>Object-Oriented Programming</h2>
+<h2>Object-Oriented Programming</h2>
+<ul>
+  <li>Department of Computer Science</li>
+  <li>Semester: 4</li>
+  <li>Credits : 4</li>
+  <li>Coefficient: 2</li>
+</ul>
+
+<h3>Teaching Objectives</h3>
+<ul>
+  <li>
+    Understanding the essence of object-oriented programming and its translation
+    into the Java language.
+  </li>
+  <li>
+    Developing intuitive reasoning to provide a solution to a simple problem
+    using the object-oriented approach.
+  </li>
+  <li>Writing a functional program in the Java language.</li>
+  <li>
+    Understanding the essence and importance of object-oriented reasoning and
+    OOP.
+  </li>
+</ul>
+
+<h3>Prerequisite Knowledge</h3>
+<p>Language C</p>
+
+<h3>Chapter 1. Basics of OOP</h3>
+<ol>
+  <li>Introduction</li>
+  <li>
+    Fundamental Concepts of OOP
     <ul>
-      <li>Semester: 4</li>
-       
-      <li> Credits : 4</li>
-      <li>Coefficient: 2</li>
+      <li>Brief history of OOP</li>
+      <li>Procedural programming vs. object-oriented programming</li>
+      <li>Code reuse</li>
+      <li>Introduction to modularity</li>
     </ul>
+  </li>
+  <li>
+    Objects and Classes
+    <ul>
+      <li>Object concepts</li>
+      <li>Class concepts</li>
+      <li>Attributes</li>
+      <li>Message concept</li>
+      <li>Problem-solving through message exchange</li>
+    </ul>
+  </li>
+  <li>
+    Introduction to Java
+    <ul>
+      <li>Types and control structures in Java</li>
+      <li>Classes and instantiation</li>
+      <li>Methods</li>
+      <li>References and parameter passing</li>
+      <li>Input/Output</li>
+      <li>Default constructor and other constructors</li>
+      <li>Destructors</li>
+    </ul>
+  </li>
+</ol>
 
-    <h3>Teaching Objectives</h3>
-    <p>
-      The objective of this course is to introduce the basic concepts of
-      object-oriented programming (OOP) through practice using the Java
-      language. Each chapter includes certain concepts that are translated into
-      Java at its end so that the student can translate the theoretical concepts
-      acquired into practice. By the end of the semester, the student is
-      expected to have acquired the following skills:
-    </p>
-    <ol>
-      <li>
-        Understanding the essence of object-oriented programming and its
-        translation into the Java language.
-      </li>
-      <li>
-        Developing intuitive reasoning to provide a solution to a simple problem
-        using the object-oriented approach.
-      </li>
-      <li>Writing a functional program in the Java language.</li>
-      <li>
-        Understanding the essence and importance of object-oriented reasoning
-        and OOP.
-      </li>
-    </ol>
+<h3>Chapter 2. Encapsulation</h3>
+<ol>
+  <li>Visibility levels</li>
+  <li>
+    Encapsulation
+    <ul>
+      <li>Data encapsulation (attributes)</li>
+      <li>Code encapsulation (messages)</li>
+    </ul>
+  </li>
+  <li>
+    Encapsulation in Java
+    <ul>
+      <li>Access control (public, private)</li>
+      <li>Accessors (get and set)</li>
+      <li>Instance access (this)</li>
+      <li>Class variables and methods (static)</li>
+    </ul>
+  </li>
+</ol>
 
-    <h3>Prerequisite Knowledge</h3>
-    <p>Language C</p>
-
-     
-    <h3>Chapter 1. Basics of OOP</h3>
-    <ol>
-      <li>Introduction</li>
+<h3>Chapter 3. Inheritance</h3>
+<ol>
+  <li>Subclasses and inheritance</li>
+  <li>Simple inheritance, multiple inheritance</li>
+  <li>Class hierarchy</li>
+  <li>Polymorphism</li>
+  <li>
+    Inheritance and polymorphism in Java
+    <ul>
+      <li>Simple inheritance (extends)</li>
       <li>
-        Fundamental Concepts of OOP
+        Encapsulation in inheritance
         <ul>
-          <li>Brief history of OOP</li>
-          <li>Procedural programming vs. object-oriented programming</li>
-          <li>Code reuse</li>
-          <li>Introduction to modularity</li>
+          <li>Member protection (protected)</li>
+          <li>Class constructors (this(), super())</li>
+          <li>'Object' class</li>
+          <li>Implicit and explicit typecasting</li>
+          <li>Inheritance limitation (final)</li>
         </ul>
       </li>
       <li>
-        Objects and Classes
+        Polymorphism
         <ul>
-          <li>Object concepts</li>
-          <li>Class concepts</li>
-          <li>Attributes</li>
-          <li>Message concept</li>
-          <li>Problem-solving through message exchange</li>
+          <li>Method overloading</li>
+          <li>Method overriding</li>
         </ul>
       </li>
-      <li>
-        Introduction to Java
-        <ul>
-          <li>Types and control structures in Java</li>
-          <li>Classes and instantiation</li>
-          <li>Methods</li>
-          <li>References and parameter passing</li>
-          <li>Input/Output</li>
-          <li>Default constructor and other constructors</li>
-          <li>Destructors</li>
-        </ul>
-      </li>
-    </ol>
+      <li>Abstract classes (usage and importance)</li>
+      <li>Interfaces (usage and importance)</li>
+    </ul>
+  </li>
+</ol>
 
-    <!-- Chapter 2 and 3 content omitted for brevity -->
+<!-- Add further chapters if necessary -->
 
-    <h3>Evaluation Method</h3>
-    <p>Exam (60%), Continuous assessment (40%)</p>
+<h3>Evaluation Method</h3>
+<ul>
+  <li>Exam : 60%</li>
+  <li>Continuous assessment : 40%</li>
+</ul>
 
-    <h3>References</h3>
-    <ol>
-      <li>
-        "Learn Object-Oriented Programming with the Java Language." Luc Gervais.
-        Eni. 2nd edition.
-      </li>
-      <li>
-        <a
-          href="https://openclassrooms.com/courses/apprenez-a-programmer-en-java"
-          >openclassrooms.com - Learn to Program in Java</a
-        >
-      </li>
-      <li>
-        "Java 8 - Learn Object-Oriented Programming and master the language."
-        Thierry GROUSSARD Luc GERVAIS. Edition ENI. 2015.
-      </li>
-      <li>
-        "Object-Oriented Programming in Java." Michel Divay. Edition DUNOD.
-        2006.
-      </li>
-    </ol>
- 
+<h3>References</h3>
+<ol>
+  <li>
+    ”Learn Object-Oriented Programming with the Java Language.” Luc Gervais.
+    Eni. 2nd edition.
+  </li>
+  <li>
+    <a href="https://openclassrooms.com/courses/apprenez-a-programmer-en-java"
+      >https://openclassrooms.com/courses/apprenez-a-programmer-en-java</a
+    >
+  </li>
+  <li>
+    ”Java 8 - Learn Object-Oriented Programming and master the language.”
+    Thierry GROUSSARD Luc GERVAIS. Edition ENI. 2015.
+  </li>
+  <li>
+    ”Object-Oriented Programming in Java.” Michel Divay. Edition DUNOD. 2006.
+  </li>
+</ol>
