--- a/src/canevasWebDev.html
+++ b/src/canevasWebDev.html
@@ -62,8 +62,10 @@
 </h3>
 
 <h3>Evaluation Mode</h3>
-<p>Examination: 60%</p>
-<p>Continuous Assessment: 40%</p>
+<ul>
+  <li>Examination: 60%</li>
+  <li>Continuous Assessment: 40%</li>
+</ul>
 
 <h3>References</h3>
 <ul>
