--- a/index.html
+++ b/index.html
@@ -64,10 +64,14 @@
         <div>
           <h3>Exams and correction</h3>
           <ul>
-            <li>Exam S4 (NS)</li>
-            <li>Correction (Exam S4)</li>
-            <li>Exam S4 (RT)</li>
-            <li>Correction (RT S4)</li>
+            <li>Exam S5 (NS)</li>
+            <li>
+              <a href="Exams/2024/OOP/SN/correction exam 2024 oop SN.pdf"
+                >Correction (Exam S5)</a
+              >
+            </li>
+            <li>Exam S5 (RT)</li>
+            <li>Correction (RT S5)</li>
           </ul>
         </div>
       </div>
