test site wancharissi 01

--- a/Wancharissi/sites/wch01/wch01.html
+++ b/Wancharissi/sites/wch01/wch01.html
@@ -58,7 +58,7 @@
 
       <a href="#" class="disabled">المداخلات</a>
 
-      <a href="php/sidelines.php" target="_blank" id="photo"
+      <a href="php/sidelines.html" target="_blank" id="photo"
         >على هامش الملتقى</a
       >
     </nav>
