test site wancharissi 01

--- a/Wancharissi/index.html
+++ b/Wancharissi/index.html
@@ -6,11 +6,7 @@
     <title>احمد بن يحي الونشريسي</title>
     <link rel="stylesheet" href="assets/css/index.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Amiri&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Reem+Kufi+Ink&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap"
       rel="stylesheet"
     />
   </head>
