--- a/Wancharissi/sites/wch01/php/sidelines.html
+++ b/Wancharissi/sites/wch01/php/sidelines.html
@@ -1,52 +1,71 @@
 <!DOCTYPE html>
 <html dir="rtl" lang="ar">
+  <head>
+    <meta charset="UTF-8" />
+    <title>صور الملتقى</title>
+    <link rel="stylesheet" href="../assets/css/sidelines.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <title>صور الملتقى</title>
-  <link rel="stylesheet" href="../assets/css/sidelines.css" />
-</head>
+  <body>
+    <div class="title">
+      <h1>
+        على هامش الملتقى الدولي الأول : جودة الحياة والسلم الاجتماعي في النوازل
+        الفقهـية الاجتماعية المغاربية
+        <br />
+        أحمد بن يحي الونشريسي نمـوذجا
+      </h1>
+    </div>
 
-<body>
-  <div class="title">
-    <h1>
-      على هامش الملتقى الدولي الأول : جودة الحياة والسلم الاجتماعي في النوازل
-      الفقهـية الاجتماعية المغاربية
-      <br />
-      أحمد بن يحي الونشريسي نمـوذجا
-    </h1>
-  </div>
+    <div class="content">
+      <div class="rightBar">
+        <h2>فيديوهات</h2>
+        <div class="videos" id="videos">جارٍ تحميل ...</div>
 
-  <div class="content">
-    <div class="rightBar">
-      <h2>فيديوهات</h2>
-      <div class="videos" id="videos">جارٍ تحميل ...</div>
+        <h2>تدشين النصب التذكاري</h2>
+        <div class="gallery" id="visit001">
+          <img
+            src="../assets/img/photos_special/mnmWch.jpg"
+            alt="النصب التذكاري"
+          />
+        </div>
 
-      <h2> تدشين النصب التذكاري </h2>
-      <div class="gallery" id="visit001">
-        <img src="../assets/img/photos_special/mnmWch.jpg" alt="النصب التذكاري" />
-      </div>
+        <h2>كرسي الونشريسي</h2>
+        <p>
+          باقتراح من عميد كلية الآداب واللغات، أ. د. الميلود قردان، وافق معالي
+          وزير الدولة وعميد جامع الجزائر الأعظم، السيد محمد المأمون القاسمي
+          الحسني، على اعتماد "كرسيّ الفقه" باسم الإمام الونشريسي في المسجد
+          الأعظم.
+        </p>
 
-      <h2>كرسي الونشريسي</h2>
-      <p>
-        باقتراح من عميد كلية الآداب واللغات، أ. د. الميلود قردان، وافق معالي وزير الدولة وعميد جامع
-        الجزائر الأعظم، السيد محمد المأمون القاسمي الحسني، على اعتماد "كرسيّ
-        الفقه" باسم الإمام الونشريسي في المسجد الأعظم.
-      </p>
+        <h2>زيارة إلى الحظيرة الجهوية - عين عنتر</h2>
+        <div class="gallery" id="visit002">
+          <img
+            src="../assets/img/photos_special/ainAntar01.jpg"
+            alt="عين عنتر 01"
+          />
+          <img
+            src="../assets/img/photos_special/ainAntar02.jpg"
+            alt="عين عنتر 02"
+          />
+        </div>
 
-      <h2> زيارة إلى الحظيرة الجهوية - عين عنتر</h2>
-      <div class="gallery" id="visit002">
-        <img src="../assets/img/photos_special/ainAntar01.jpg" alt="عين عنتر 01" />
-        <img src="../assets/img/photos_special/ainAntar02.jpg" alt="عين عنتر 02" />
-      </div>
+        <h2>زيارة إلى مسقط رأس العلامة الونشريسي</h2>
+        <div class="gallery" id="visit003">
+          <img
+            src="../assets/img/photos_special/wchHome001.jpg"
+            alt="مسقط رأس الونشريسي 01"
+          />
+          <img
+            src="../assets/img/photos_special/wchHome002.jpg"
+            alt="مسقط رأس الونشريسي 02"
+          />
+        </div>
 
-      <h2> زيارة إلى مسقط رأس العلامة الونشريسي </h2>
-      <div class="gallery" id="visit003">
-        <img src="../assets/img/photos_special/wchHome001.jpg" alt="مسقط رأس الونشريسي 01" />
-        <img src="../assets/img/photos_special/wchHome002.jpg" alt="مسقط رأس الونشريسي 02" />
-      </div>
-
-      <!-- <h2> صورة للإمام الونشريسي </h2>
+        <!-- <h2> صورة للإمام الونشريسي </h2>
       <p> صورة متخيلة بالذكاء الاصطناعي للإمام الونشريسي
         من تصميم
         الدكتور بعلول علي
@@ -54,22 +73,21 @@
       <div class="gallery">
         <img src="../assets/img/photos_special/mnmWch.jpg" alt="النصب التذكاري" />
       </div> -->
+      </div>
+
+      <div>
+        <h2>صور الملتقى</h2>
+        <div class="gallery" id="gallery">جارٍ تحميل ...</div>
+      </div>
     </div>
 
-    <div>
-      <h2> صور الملتقى </h2>
-      <div class="gallery" id="gallery">جارٍ تحميل ...</div>
+    <!-- Preview Wrapper -->
+    <div class="preview-container" id="preview-container">
+      <img id="preview-image" src="" alt="Preview Image" />
     </div>
-  </div>
 
-  <!-- Preview Wrapper -->
-  <div class="preview-container" id="preview-container">
-    <img id="preview-image" src="" alt="Preview Image" />
-  </div>
-
-  <script src="../js/videos.js"></script>
-  <script src="../js/photos.js"></script>
-  <script src="../js/previewImages.js"></script>
-</body>
-
+    <script src="../js/videos.js"></script>
+    <script src="../js/photos.js"></script>
+    <script src="../js/previewImages.js"></script>
+  </body>
 </html>
