--- a/Wancharissi/sites/wch02/wch02.html
+++ b/Wancharissi/sites/wch02/wch02.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>الاجتهاد والقضايا المعاصرة</title>
 
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
+
     <script src="../../../Wancharissi/jquery/jquery-3.7.1.min.js"></script>
     <link rel="stylesheet" href="assets/css/wch02.css" />
+
   </head>
   <body>
     <!--<div class="ministry">
