--- a/Wancharissi/sites/wch01/wch01.html
+++ b/Wancharissi/sites/wch01/wch01.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>الملتقى الدولي الأول حول الونشريسي</title>
     <link rel="stylesheet" href="assets/css/wch01.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
 
     <script src="../../../Wancharissi/jquery/jquery-3.7.1.min.js"></script>
   </head>
